code skeleton setup on .Net 6

--- a/src/04. Endpoints/WebApi/appsettings.json
+++ b/src/04. Endpoints/WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=SampleProject;Data Source=DESKTOP-4G95RKS\\MARYAM"
+    
+    "DatabaseConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SampleProject;Integrated Security=SSPI;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
