--- a/src/04. Endpoints/WebApi/appsettings.json
+++ b/src/04. Endpoints/WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    
-    "DatabaseConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SampleProject;Integrated Security=SSPI;Connect Timeout=30"
+   
+    "DatabaseConnection": "{your database connection string}"
   },
   "Logging": {
     "LogLevel": {
