--- a/src/04. Endpoints/WebApi/appsettings.json
+++ b/src/04. Endpoints/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    //sample db connection string
+    //Put below the sql db connection string
     "DatabaseConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SampleProject;Integrated Security=SSPI;Connect Timeout=30"
   },
   "Logging": {
